automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <!-- your code here! -->
       
-      <section>
+      <section class="wrapper">
         <header>
           <h1>Zetsy</h1>
         </header>
