--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
       <!-- your code here! -->
       
-      <section class="wrapper">
+      <section>
         <header>
           <h1>Zetsy</h1>
         </header>
