--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
       <!-- your code here! -->
     <h1>Zetsy</h1>
-      <div>
+      <div class="img-style">
         <img src="images/necklace.jpg">
       </div>
       <div>
