automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -32,7 +32,43 @@
       <div>
         <h2>Press</h2>
       </div>
+      <section>
+        <div>
+          <img>
+          <img>
+          <img>
+          <img>
+        </div>
+      </section>
+      
       
     </div>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
