automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <section>
         <div>
-          <img>
+          <img src="images/nmai-logo.png">
           <img>
           <img>
           <img>
