--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       <section>
         <div>
           <img src="images/nmai-logo.png">
-          <img>
-          <img>
-          <img>
+          <img src="images/times-logo.png">
+          <img src="images/sedona-logo.png">
+          <img src="images/bergdorf-logo.png">
         </div>
       </section>
       
