--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <h2>Press</h2>
       </div>
       <section>
-        <div>
+        <div class="logo-images">
           <img src="images/nmai-logo.png">
           <img src="images/times-logo.png">
           <img src="images/sedona-logo.png">
