automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       <div>
         <h2>Press</h2>
       </div>
-      <section>
-        <div class="logo-images">
+      <sectionclass="logo-images">
+        <div >
           <img src="images/nmai-logo.png">
           <img src="images/times-logo.png">
           <img src="images/sedona-logo.png">
