automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <div>
         <h2>Press</h2>
       </div>
-      <section class="logo-images">
+      <section >
         <div >
-          <img src="images/nmai-logo.png" >
+          <img src="images/nmai-logo.png" class="logo-images">
           <img src="images/times-logo.png">
           <img src="images/sedona-logo.png">
           <img src="images/bergdorf-logo.png">
