automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <section >
         <div >
           <img src="images/nmai-logo.png" class="logo-images">
-          <img src="images/times-logo.png">
+          <img src="images/times-logo.png" class="logo-images">
           <img src="images/sedona-logo.png">
           <img src="images/bergdorf-logo.png">
         </div>
