--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div >
           <img src="images/nmai-logo.png" class="logo-images">
           <img src="images/times-logo.png" class="logo-images">
-          <img src="images/sedona-logo.png">
-          <img src="images/bergdorf-logo.png">
+          <img src="images/sedona-logo.png" class="logo-images">
+          <img src="images/bergdorf-logo.png" class="logo-images">>
         </div>
       </section>
       
