--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wrapper">
       <!-- your code here! -->
-    <h1></h1>Zetsy
+    <h1>Zetsy</h1>
       <div class="img-style">
         <img src="images/necklace.jpg">
       </div>
