--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <section >
         <div >
           <a href="http://nmai.si.edu"><img src="images/nmai-logo.png" class="logo-images"></a>
-          <img src="images/times-logo.png" class="logo-images">
+          <a></a><img src="images/times-logo.png" class="logo-images">
           <img src="images/sedona-logo.png" class="logo-images">
           <img src="images/bergdorf-logo.png" class="logo-images">>
         </div>
