automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       <section >
         <div >
           <a href="http://nmai.si.edu"><img src="images/nmai-logo.png" class="logo-images"></a>
-          <a></a><img src="images/times-logo.png" class="logo-images">
-          <img src="images/sedona-logo.png" class="logo-images">
-          <img src="images/bergdorf-logo.png" class="logo-images">>
+          <a href=" http://www.nytimes.com/pages/t-magazine/ "><img src="images/times-logo.png" class="logo-images"></a>
+          <a></a><img src="images/sedona-logo.png" class="logo-images">
+          <a></a><img src="images/bergdorf-logo.png" class="logo-images">>
         </div>
       </section>
       
