--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
         <div >
           <a href="http://nmai.si.edu"><img src="images/nmai-logo.png" class="logo-images"></a>
           <a href=" http://www.nytimes.com/pages/t-magazine/ "><img src="images/times-logo.png" class="logo-images"></a>
-          <a></a><img src="images/sedona-logo.png" class="logo-images">
-          <a></a><img src="images/bergdorf-logo.png" class="logo-images">>
+          <a><img src="images/sedona-logo.png" class="logo-images"></a>
+          <a></a><img src="images/bergdorf-logo.png" class="logo-images">
         </div>
       </section>
       
