automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="wrapper">
       <!-- your code here! -->
-   <a href="#"> <h1>Zetsy</h1></a>
+   <a href="#" class="link-access"> <h1>Zetsy</h1></a>
       <div class="img-style">
         <img src="images/necklace.jpg">
       </div>
