--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body>
     <div class="wrapper">
       <!-- your code here! -->
-   <a href="#" class="link-access"> <h1>Zetsy</h1></a>
+      <div></div>
+   <a href="#" class="link-access"><h1>Zetsy</h1></a>
+   
       <div class="img-style">
         <img src="images/necklace.jpg">
       </div>
