--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <div class="wrapper">
       <!-- your code here! -->
-      <div>
+      <span>
    <a href="#" class="link-access"><h1>Zetsy</h1></a>
-   </div>
+   </span>
       <div class="img-style">
         <img src="images/necklace.jpg">
       </div>
