--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
     <div class="wrapper">
       <!-- your code here! -->
-     <header></header>
+     <header>
    <a href="#" class="link-access"><h1>Zetsy</h1></a>
-   
+   </header>
       <div class="img-style">
         <img src="images/necklace.jpg">
       </div>
