automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
           <a href="http://www.bergdorfgoodman.com/ "><img src="images/bergdorf-logo.png" class="logo-images"></a>
         </div>
       </section>
-      
+      <footer>
+        &copy; 2014 Zetsy, All Rights Reserved.
+      </footer>
       
     </div>
   </body>
